[package]
name = "diff_fmt"
version = "0.1.0"
authors = ["Matthew <the10thwiz@gmail.com>"]
edition = "2018"
description = "A simple diff format for color terminals"
repository = "https://github.com/the10thWiz/fmt"
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5"